# caboo

./: .gitignore  README.md  flake.nix  pyproject.toml
nix/: default.nix  shell.nix
src/caboo/: card.py
