[project]
name = "caboo"
version = "0.0.1"
description = "Caboo TUI game"
readme = "README.md"
authors = [
    { name = "pixel", email = "edwardoliverthomas@gmail.com" }
]
requires-python = ">=3.13"
dependencies = []

[build-system]
requires = ["uv_build>=0.9.28,<0.10.0"]
build-backend = "uv_build"


[tool.ruff]
line-length = 88

# E = Error, F = pyflakes, I = Isort
select = ["E", "F", "I"]

fix = true

indent-style = "space"

indent-width = 4

[tool.pyright]
include ["src"]

typeCheckMode = "strict"

executionEnvironments = [
  {root = "src" }
]
